warn about file duplicates
